<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Register Page"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif"
        android:hint="@string/name"
        android:lineSpacingExtra="8sp"

        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/surnameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif"
        android:hint="@string/surname"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginLeft="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41.5dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"

        android:textSize="16sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.04"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don you have an account ?" />

        <TextView
            android:id="@+id/login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000FF"
            android:text=" Log in!"
            android:gravity="center"
            android:onClick="LoginToAccount"/>

    </LinearLayout>


</LinearLayout>